<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
		 xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
		 xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>

	<groupId>org.happykraken.practice</groupId>
	<artifactId>Cucumber-Testcases</artifactId>
	<version>1.0-SNAPSHOT</version>

	<properties>
		<cucumber.options>--plugin pretty --tags @wip</cucumber.options>
		<test.cucumber.report.dir>target/cucumber</test.cucumber.report.dir>
		<maven.compiler.source>1.10</maven.compiler.source>
		<maven.compiler.target>1.10</maven.compiler.target>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
	</properties>
	<profiles>
		<profile>
			<id>allTests</id>
			<properties>
				<cucumber.options>--plugin html:target/cucumber</cucumber.options>
				<test.cucumber.report.dir>target/cucumber</test.cucumber.report.dir>
			</properties>
			<build>
				<plugins>
					<plugin>
						<groupId>net.masterthought</groupId>
						<artifactId>maven-cucumber-reporting</artifactId>
						<version>5.3.0</version>
						<executions>
							<execution>
								<id>execution</id>
								<phase>verify</phase>
								<goals>
									<goal>generate</goal>
								</goals>
								<configuration>
									<projectName>Results</projectName>
									<outputDirectory>${project.build.directory}</outputDirectory>
									<inputDirectory>${project.build.directory}/cucumber</inputDirectory>
									<jsonFiles>
										<param>**/*.json</param>
									</jsonFiles>
								</configuration>
							</execution>
						</executions>
					</plugin>

					<plugin>
						<groupId>org.apache.maven.plugins</groupId>
						<artifactId>maven-surefire-plugin</artifactId>
						<version>3.0.0-M3</version>
						<executions>
							<execution>
								<phase>integration-test</phase>
							</execution>
						</executions>
						<configuration>
							<forkCount>4</forkCount>
							<reuseForks>false</reuseForks>
							<testFailureIgnore>true</testFailureIgnore>
							<argLine>-Xmx1024m -XX:MaxPermSize=256m</argLine>
							<includes>
								<include>**/*_Test.java</include>
							</includes>
						</configuration>
					</plugin>
				</plugins>
			</build>
		</profile>
	</profiles>

	<dependencies>
		<dependency>
			<groupId>org.happykraken.practice</groupId>
			<artifactId>Browser-Testing-Framework</artifactId>
			<version>1.0-SNAPSHOT</version>
		</dependency>

		<dependency>
			<groupId>org.junit.jupiter</groupId>
			<artifactId>junit-jupiter-engine</artifactId>
			<version>5.6.0</version>
			<scope>test</scope>
		</dependency>

		<dependency>
			<groupId>org.junit.vintage</groupId>
			<artifactId>junit-vintage-engine</artifactId>
			<version>5.6.0</version>
			<scope>test</scope>
		</dependency>

		<dependency>
			<groupId>io.cucumber</groupId>
			<artifactId>cucumber-junit</artifactId>
			<version>5.1.1</version>
		</dependency>
	</dependencies>

</project>